--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This Project explains all Node JS examples",
   "main": "app.js",
   "publishConfig": {
-    "registry": "http://3.110.204.78:9980/devopstech/repository/nodecicd/"
+    "registry": "http://52.66.249.128/:9980/devopstech/repository/nodecicd/"
   },
   "scripts": {
     "server": "http-server -c-1 -p 9999",
